# modern_cpp_training

./: .gitignore  CMakeLists.txt  README.md  license.txt  make_new_project.sh
algo_strings/: CMakeLists.txt
algo_strings/src/: algo_strings-main.cpp
auto-tests/: .cproject  .project  CMakeLists.txt
auto-tests/src/: auto-tests-main.cpp
explicit-constructor/: CMakeLists.txt
explicit-constructor/src/: explicit-constructor-main.cpp
five_philosophers_dinner/: CMakeLists.txt
five_philosophers_dinner/src/: five-philosophers-dinner-main.cpp
future_and_promise/: CMakeLists.txt
future_and_promise/src/: future_and_promise-main.cpp
include/: perf-measurement.h
move-statements/: .cproject  .project  CMakeLists.txt
move-statements-class-fields/: CMakeLists.txt
move-statements-class-fields/src/: move-statements-class-fields-main.cpp
move-statements/src/: MyClass.cpp  MyClass.h  move-statements.cpp
multimap/: .cproject  .project  CMakeLists.txt
multimap/src/: multimap-main.cpp
project_boilerplate/: CMakeLists.txt
project_boilerplate/src/: project-boilerplate.cpp
std-async-and-thread-local/: CMakeLists.txt
std-async-and-thread-local/src/: std-async-and-thread-local-main.cpp
type_deduction/: CMakeLists.txt
type_deduction/src/: type_deduction-main.cpp
varidic-templates/: CMakeLists.txt
varidic-templates/src/: varidic-templates-main.cpp
